k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: two-tier
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
